--- a/views/app/my/my_favorite.html
+++ b/views/app/my/my_favorite.html
@@ -55,7 +55,7 @@
 											<span class="username text-grey mr-1  hidden-sm" uid="{{.User.ID}}">{{.User.Username}}</span>
 											<span class="date text-grey hidden-sm">{{.Article.CreatedAt.Unix | strtime}}</span>
 											{{/*<span> <span class="text-grey mx-2">←</span>
-                                                <span class="username text-grey mr-1" uid="2">{{.sessions.username}}</span>
+                                                <span class="username text-grey mr-1" uid="2">{{.sessions.Username}}</span>
                                                 <span class="text-grey">3天前</span>
                                             </span>*/}}
 											<span class="ml-3">
