--- a/views/app/saying/saying.html
+++ b/views/app/saying/saying.html
@@ -235,7 +235,7 @@
 			'<div class="d-flex justify-content-between small text-muted">' + '           <div> ' +
 			'<span style="padding-bottom:0;margin-bottom:0;color:; ">' +
 			'<i class="iconfont icon-v1" style="font-size: !important;">管理员 </i> ' + '</span>' + '<span class="username">' +
-			'<a href="?user-2.htm" class="text-muted font-weight-bold">{{.sessions.username}}</a>' + '</span>' +
+			'<a href="?user-2.htm" class="text-muted font-weight-bold">{{.sessions.Username}}</a>' + '</span>' +
 			'<span class="date text-grey ml-2">2小时前</span>' + '</div> ' + '<div class="text-right text-grey"> ' +
 			'<style>.haya-comment-like .haya-comment-like-loved {color: var(--secondary) !important;}</style> ' +
 			'<a href="javascript:void(0)" data-tid="1" data-pid="5" class="text-grey comment_reply mr-3">' +
