--- a/views/app/mod/del_mod.html
+++ b/views/app/mod/del_mod.html
@@ -20,8 +20,8 @@
 		<script src="/static/js/bootstrap-plugin.js?1.0"></script>
 		<script src="/static/js/async.js?1.0"></script>
 		<script src="/static/js/form.js?1.0"></script>
-		<script src="/static/js//bbs.js?1.0"></script>
-		<script src="/static/lang/zh-cn/bbs.js?1.0"></script>
+		<script src="/static/js/bbs.js?1.0"></script>
+		<script src="/static/js/lang.js?1.0"></script>
 		<style>
         @keyframes xndigest {
             0% { color: red; text-shadow: 0 0 3px #FF8D8D;}
