--- a/views/app/saying/saying.html
+++ b/views/app/saying/saying.html
@@ -10,14 +10,15 @@
 				<div class="card card-saying">
 					<div class="card-body">
 						<div class="media">
-							<a href="?user-1.htm" tabindex="-1">
+							{{$sesid := .sessions.Userid}}
+							<a href="{{if eq .saying.UserID $sesid}} /my.html {{else}}/user/{{.saying.UserID}}/info.html{{end}}" tabindex="-1">
 								<img class="avatar-3 mr-3" src="{{.saying.User.Avatar}}">
 							</a>
 							<div class="media-body">
 								<div class="d-flex justify-content-between small">
 									<div>
 										<span class="username">
-											<a href="?user-1.htm" class="text-muted font-weight-bold">{{.saying.User.Username}}</a>
+											<a href="{{if eq .saying.UserID $sesid}} /my.html {{else}}/user/{{.saying.UserID}}/info.html{{end}}" class="text-muted font-weight-bold">{{.saying.User.Username}}</a>
 										</span>
 										<span class="date text-grey ml-2">
 											{{.saying.CreatedAt.Unix | strtime}}
@@ -74,7 +75,7 @@
 							{{$isadmin := .session.Isadmin}}
 							{{range $index,$comment := .commentlist}}
 							<li class="media comment" data-pid="2" data-uid="2">
-								<a href="?user-2.htm" class="mr-3" tabindex="-1">
+								<a href="{{if eq .UserID $sesid}} /my.html {{else}}/user/{{.UserID}}/info.html{{end}}" class="mr-3" tabindex="-1">
 									<img class="avatar-3" src="{{$comment.User.Avatar}}">
 								</a>
 								<div class="media-body">
@@ -157,10 +158,10 @@
 				{{ template "layout/addnewarticle" .}}
 				<div class="card card-user-info">
 					<div class="m-3 text-center">
-						<a href="?user-1.htm" tabindex="-1">
+						<a href="{{if eq .UserID $sesid}} /my.html {{else}}/user/{{.UserID}}/info.html{{end}}" tabindex="-1">
 							<img class="avatar-5" src="{{.saying.User.Avatar}}">
 						</a>
-						<h5><a href="?user-1.htm">{{.saying.User.Username}}</a></h5>
+						<h5><a href="{{if eq .UserID $sesid}} /my.html {{else}}/user/{{.UserID}}/info.html{{end}}">{{.saying.User.Username}}</a></h5>
 					</div>
 					<div class="card-footer p-2">
 						<table class="w-100 small">
