--- a/views/admin/layout/adminheader.html
+++ b/views/admin/layout/adminheader.html
@@ -20,8 +20,8 @@
 		<script src="/static/js/bootstrap-plugin.js?1.0"></script>
 		<script src="/static/js/async.js?1.0"></script>
 		<script src="/static/js/form.js?1.0"></script>
-		<script src="/static/js//bbs.js?1.0"></script>
-		<script src="/static/lang/zh-cn/bbs.js?1.0"></script>
+		<script src="/static/js/bbs.js?1.0"></script>
+		<script src="/static/js/lang.js?1.0"></script>
 	</head>
 	<body>
 		<header class="navbar navbar-expand-md navbar-dark bg-dark" id="header">
