--- a/views/app/usercenter/u_info.html
+++ b/views/app/usercenter/u_info.html
@@ -1,11 +1,6 @@
 {{ template "layout/header" .}}
 <main id="body">
 	<div class="container">
-		<!-- 手机导航 / Mobile navigation -->
-		<div class="btn-group mb-3 d-lg-none" role="group" id="user_mobile_nav">
-			<a role="button" class="btn btn-secondary active" data-active="menu-user" href="?user-1.htm">个人资料</a>
-			<a role="button" class="btn btn-secondary" data-active="menu-user-article" href="?user-article-1.htm">论坛回复</a>
-		</div>
 		<div class="row">
 			<!-- PC 导航 / Mobile navigation -->
 			<div class="col-lg-2 hidden-md hidden-sm" id="user_aside">
@@ -16,7 +11,7 @@
 					</div>
 					<div class="list-group list-group-flush text-center" id="user_nav">
 						<a href="/user/{{.userinfo.ID}}/info.html" class="list-group-item list-group-item-action active" data-active="menu-user">个人资料</a>
-						<a href="/user/{{.userinfo.ID}}/article.html" class="list-group-item list-group-item-action" data-active="menu-user-article">论坛回复</a>
+						<a href="/user/{{.userinfo.ID}}/article.html" class="list-group-item list-group-item-action" data-active="menu-user-article">文章回复</a>
 					</div>
 				</div>
 			</div>
