--- a/views/app/usercenter/u_replys.html
+++ b/views/app/usercenter/u_replys.html
@@ -1,11 +1,6 @@
 {{ template "layout/header" .}}
 <main id="body">
 	<div class="container">
-		<!-- 手机导航 / Mobile navigation -->
-		<div class="btn-group mb-3 d-lg-none" role="group" id="user_mobile_nav">
-			<a role="button" class="btn btn-secondary" data-active="menu-user" href="?user-1.htm">个人资料</a>
-			<a role="button" class="btn btn-secondary active" data-active="menu-user-article" href="?user-article-1.htm">论坛回复</a>
-		</div>
 		<div class="row">
 			<!-- PC 导航 / Mobile navigation -->
 			<div class="col-lg-2 hidden-md hidden-sm" id="user_aside">
@@ -16,7 +11,7 @@
 					</div>
 					<div class="list-group list-group-flush text-center" id="user_nav">
 						<a href="/user/{{.userinfo.ID}}/info.html" class="list-group-item list-group-item-action" data-active="menu-user">个人资料</a>
-						<a href="/user/{{.userinfo.ID}}/article.html" class="list-group-item list-group-item-action active" data-active="menu-user-article">论坛回复</a>
+						<a href="/user/{{.userinfo.ID}}/article.html" class="list-group-item list-group-item-action active" data-active="menu-user-article">文章回复</a>
 					</div>
 				</div>
 			</div>
@@ -34,9 +29,10 @@
 					</div>
 					<div class="card-body">
 						<ul class="list-unstyled replylist">
+							{{$sesid := .sessions.Userid}}
 							{{range .replys}}
 							<li class="media reply" data-pid="1" data-uid="1">
-								<a href="?user-1.htm" class="mr-3" tabindex="-1">
+								<a href="{{if eq .UserID $sesid}} /my.html {{else}}/user/{{.UserID}}/info.html{{end}}" class="mr-3" tabindex="-1">
 									<img class="avatar-3" src="{{.Article.User.Avatar}}">
 								</a>
 								<div class="media-body">
@@ -47,24 +43,13 @@
 													{{.Article.User.Group.Name}} </i>
 											</span>
 											<span class="username">
-												<a href="?user-1.htm" class="text-muted font-weight-bold">{{.Article.User.Username}}</a>
+												<a href="{{if eq .UserID $sesid}} /my.html {{else}}/user/{{.UserID}}/info.html{{end}}" class="text-muted font-weight-bold">{{.Article.User.Username}}</a>
 											</span>
 											<span class="date text-grey ml-2">{{.Article.CreatedAt.Unix | strtime}}</span>
 										</div>
-										<div class="text-right text-grey">
-											<style>
-												.haya-reply-like .haya-reply-like-loved {
-													color: var(--secondary) !important;
-												}
-											</style>
-											<a href="?reply-update-1.htm" class="text-grey reply_update mr-3"><i class="icon-edit" title="编辑"></i> <span
-												 class="d-none">编辑</span></a>
-											<a data-href="?reply-delete-1.htm" data-confirm-text="确定删除吗？" href="javascript:void(0);" class="text-grey reply_delete _confirm mr-3"><i
-												 class="icon-remove" title="删除"></i> <span class="d-none">删除</span></a>
-										</div>
 									</div>
 									<div class="message mt-1 break-all">
-										<h6><a href="?article-1.htm" target="_blank">{{.Article.Title}}</a></h6>
+										<h6><a href="/article/{{.ID}}/detail.html" target="_blank">{{.Article.Title}}</a></h6>
 										<p>{{.Reply.Message | unescaped}}</p>
 									</div>
 								</div>
