--- a/views/app/layout/newarticle_button.html
+++ b/views/app/layout/newarticle_button.html
@@ -1,12 +1,12 @@
 {{ define "layout/addnewarticle" }}
 <a id="addnewarticle" role="button" class="btn btn-primary btn-block mb-3" href="#">写文章</a>
 <br>
-<a id="addnewsaying" role="button" class="btn btn-primary btn-block mb-3" href="#">发说说</a>
+<a id="addnewsaying" role="button" class="btn btn-primary btn-block mb-3" href="#">写说说</a>
 <script>
     var jnewarticle = $("#addnewarticle")
     jnewarticle.on("click", function () {
         if (!{{.islogin}}) {
-            $.alert("请先登录")
+            alert("登录后可操作")
             return
         }
         
@@ -15,7 +15,7 @@
     var jnewsaying = $("#addnewsaying")
     jnewsaying.on("click", function () {
         if (!{{.islogin}}) {
-            $.alert("请先登录")
+            alert("登录后可操作")
             return
         }
         location.href="/newsaying.html"
