--- a/views/app/saying/saying.html
+++ b/views/app/saying/saying.html
@@ -95,7 +95,7 @@
 					</form>
 					{{else}}
 					<li class="comment newcomment media">
-						<a role="button" class="btn btn-default btn-block xn-back col-lg-6 mx-auto mb-3" target="_blank" href="/login.html">登录可评论</a>
+						<a role="button" class="btn btn-default btn-block xn-back col-lg-6 mx-auto mb-3" target="_blank" href="/login.html">登录后可评论</a>
 					</li>
 					{{end}}
 					<!-- /.comment-area -->
