--- a/views/app/usercenter/u_info.html
+++ b/views/app/usercenter/u_info.html
@@ -2,40 +2,35 @@
 <!-- ==================== contact-section start ==================== -->
 <section id="contact-section" class="contact-section w100dt mb-50">
 	<div class="container">
-		<div class="row">
-			<div class="col m9 s12">
-				<div class="sidebar-title left-align">
-					<a href="/my.html"><h2>个人资料</h2></a>
+		<div class="row">			
+			<nav class="breadcrumb-nav w100dt">
+				<div class="center" role="group">
+					<a class="btn active" href="#">用户资料</a>
 				</div>
+			</nav>
+		</div><br>
+		<div class="row">
+			<div class="col m9 s12">	
 				<div class="contact-me">
 					<div class="row">
-						<div class="col m6 s12">
-							<div class="ppic left">
-								<img src="{{.userinfo.Avatar}}" alt="Image">
-								<h4>{{.sessions.Username}}</h4>
-							</div>
+						<div class="col m2 s12"></div>
+						<div class="col m8 s12">
 							<div class="contact-things">
-								
 								<div class="c-text p-0">
-									<div class="card-body">
-										<div class="row line-height-4">
-											<div class="col-md-2 col-sm-12 text-center">
-												
-												<br><b>{{.userinfo.Username}} </b>
-											</div>
-											<div class="col-4 col-sm-5">
-												<span class="text-muted">文章数：</span>{{.userinfo.ArticlesCnt}}<br>
-												<span class="text-muted">回复数：</span>{{.userinfo.ReplysCnt}}<br>
-												<span class="text-muted">用户组：</span>{{.userinfo.Group.Name}} <br>
-												<span class="text-muted">创建时间：</span>{{.userinfo.CreatedAt.Format "2006-01-02"}}<br>
-												<span class="text-muted">最后登录：</span>{{.userinfo.LoginDate.Format "2006-01-02"}} <br>
-											
-											</div>
-											<div class="col-auto">
-												</div>
-										</div>
-										{{/*<a role="button" class="btn btn-danger confirm btn-block my-3" data-confirm-text="确定删除用户？" data-method="post" href="?mod-deleteuser-1.htm">删除用户</a>*/}}
-									</div>				
+									<span class="text-muted">用户头像：</span>&nbsp;
+									<div class="right">
+									<img src="{{.userinfo.Avatar}}" alt="Image" style="height: 120px; width: 120px;">
+									</div>
+								</div>
+								<div class="c-text p-0"><br>
+									<span class="text-muted">用户名：</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.Username}}<br>
+									<span class="text-muted">收藏数：</span><a href="?my-favorites.htm" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.FavouriteCnt}}</a><br>
+									<span class="text-muted">文章数：</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.ArticlesCnt}}<br>
+									<span class="text-muted">回复数：</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.ReplysCnt}}<br>
+									<span class="text-muted">说说数：</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.SayingsCnt}}<br>
+									<span class="text-muted">评论数：</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.CommentsCnt}}<br>							
+									<span class="text-muted">注册时间：</span>&nbsp;&nbsp;{{.userinfo.CreatedAt.Format "2006-01-02"}}<br>
+									<span class="text-muted">上次登录：</span>&nbsp;&nbsp;{{.userinfo.LoginDate.Format "2006-01-02"}}<br>								
 								</div>
 							</div>
 						</div>
@@ -46,8 +41,7 @@
 				<!-- /.contact-me -->
 			</div>
 			<!-- colm9 -->
-			
-			
+			{{ template "my/sidebar" }}
 		</div>
 		<!-- row -->
 	</div>
@@ -55,5 +49,4 @@
 </section>
 <!-- /#contact-section -->
 <!-- ==================== contact-section end ==================== -->
-
 {{ template "layout/footer" .}}
