--- a/views/app/my/my_favorite.html
+++ b/views/app/my/my_favorite.html
@@ -1,89 +1,62 @@
 {{ template "layout/header" .}}
-<!-- ==================== contact-section start ==================== -->
 <section id="contact-section" class="contact-section w100dt mb-50">
 	<div class="container">
+		<div class="row">			
+			<nav class="breadcrumb-nav w100dt">
+				<div class="center" role="group">
+					<a class="btn active" href="/my_favorite.html">我的收藏</a>
+					<a class="btn-flat active" href="/my_article.html">我的文章</a>
+					<a class="btn-flat active" href="/my_reply.html">我的回复</a>
+					<a class="btn-flat active" href="/my_saying.html">我的说说</a>
+					<a class="btn-flat active" href="/my_comment.html">我的评论</a>
+				</div>
+			</nav>
+		</div><br>
 		<div class="row">
-			<div class="col m9 s12">
-				<div class="sidebar-title left-align">
-					<a href="/my.html"><h2>个人资料</h2></a>
-				</div>
-				<div class="contact-me">
-					<div class="row">
-						<div class="col m6 s12">
-							<div class="ppic left">
-								<img src="{{.sessions.Useravatar}}" alt="Image">
-								<h4>{{.sessions.Username}}</h4>
-							</div>
-							<div class="contact-things">
-								
-								<div class="c-text p-0">
-									<div class="card-body">
-										<ul class="list-unstyled articlelist mb-0">
-											{{range .articles}}
-											<li class="media article tap top_3 " data-href="/article/{{.ArticleID}}/detail.html" data-tid="{{.ArticleID}}">
-												<!-- {{/*<input type="checkbox" name="modtid" class="mt-3 mr-2" value="{{.ArticleID}}">*/}} <a href="/user/{{.User.ID}}/info.html"
-												 tabindex="-1" class="ml-1 mt-1 mr-3">
-													<img class="avatar-3" src="{{.User.Avatar}}">
-												</a> -->
-												<div class="media-body">
-													<div class="title break-all">
-														<a href="/article/{{.ArticleID}}/detail.html"><span class="huux_article_hlight_style1">{{.Article.Title}}</span></a>
-													</div>
-													<div class="d-flex justify-content-between small mt-1">
-														<div>
-															<span style="padding-bottom:0;margin-bottom:0;color:; ">
-																<i class="iconfont icon-v1" style="font-size: !important;"></i>
-															</span>
-															<span class="username text-grey mr-1  hidden-sm" uid="{{.User.ID}}">{{.User.Username}}</span>
-															<span class="date text-grey hidden-sm">{{.Article.CreatedAt.Unix | strtime}}</span>
-															{{/*<span> <span class="text-grey mx-2">←</span>
-																<span class="username text-grey mr-1" uid="2">{{.sessions.Username}}</span>
-																<span class="text-grey">3天前</span>
-															</span>*/}}
-															<span class="ml-3">
-																<a href="javascript:;" onclick="myfavourite({{.ArticleID}})" title="移除收藏" class="text-grey text-small js-haya-favorite-remove"
-																 data-tid="1">
-																	<i class="icon-remove" aria-hidden="true"></i> 移除收藏 </a><a>
-																</a></span><a>
-															</a></div><a>
-															<div class="text-muted small">
-																<span class="ml-2"><i class="icon-eye"></i> {{.Article.ViewsCnt}}</span>
-																<span class="ml-2"><i class="icon-comment-o"></i>
-																	{{.Article.ReplysCnt}}</span>
-																<span class="ml-2" title="1 收藏">
-																	<i class="icon-star-o" aria-hidden="true"></i>
-																	{{.Article.FavouriteCnt}}</span>
-															</div>
-														</a>
-													</div><a>
-													</a>
-												</div><a>
-												</a>
-											</li><a>
-											</a>
-											{{end}}
-										</ul><a>
-										</a>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<!-- colsm6 -->
+			<div class="col m9">
+				<div class="card">
+					<div class="table-responsive">
+						<table class="table" style="min-width: 800px">
+							<thead>
+								<tr>
+									<th></th>
+									<th width="60"><h5>序号</h5></th>
+									<th width="120"><h5>作者ID</h5></th>
+									<th width="180"><h5>标题</h5></th>
+									<th width="180"><h5>发表时间</h5></th>
+									<th width="70"><h5>浏览数</h5></th>
+									<th width="70"><h5>回复数</h5></th>
+									<th width="80"><h5>被收藏数</h5></th>
+									<th width="80"><h5>取消收藏</h5></th>
+								</tr>
+							</thead>
+							<tbody id="userlist">
+								{{range .articles}}
+								<tr uid="{{.ID}}">
+									<td></td>
+									<td>{{.ArticleID}}</td>
+									<td uid="{{.User.ID}}">{{.Article.UserID}}</td>
+									<td><a href="/article/{{.ArticleID}}/detail.html">{{.Article.Title}}</a></td>
+									<td>{{.Article.CreatedAt.Format "2006.01.02  15:04:05"}}</td>
+									<td>{{.Article.ViewsCnt}}</td>
+									<td>{{.Article.ReplysCnt}}</td>
+									<td>{{.Article.FavouriteCnt}}</td>
+									<td>
+										<a href="javascript:;" onclick="myfavourite({{.ArticleID}})" title="取消收藏" data-tid="1">
+										   取消收藏
+									   </a>
+									</td>
+								</tr>
+								{{end}}
+							</tbody>
+						</table>
 					</div>
-					<!-- row -->
 				</div>
-				<!-- /.contact-me -->
 			</div>
-			<!-- colm9 -->
-			
-			
+			{{ template "my/sidebar" }}
 		</div>
-		<!-- row -->
 	</div>
-	<!-- container -->
-</section>
-<!-- /#contact-section -->
-<!-- ==================== contact-section end ==================== -->
+</section><br>
 
 <script>
 	function myfavourite(tid) {
@@ -102,6 +75,10 @@
 				// return
 				if (res.code == 200) {
 					$(".articlelist").find("li[data-tid=" + tid + "]").remove()
+					alert('取消收藏成功')
+					setTimeout(function() {
+					location.reload()
+				}, 500)
 				} else {
 					$.alert(res.message)
 					return
