--- a/views/app/my/my_reply.html
+++ b/views/app/my/my_reply.html
@@ -1,76 +1,56 @@
 {{ template "layout/header" .}}
-<!-- ==================== contact-section start ==================== -->
 <section id="contact-section" class="contact-section w100dt mb-50">
 	<div class="container">
+		<div class="row">			
+			<nav class="breadcrumb-nav w100dt">
+				<div class="center" role="group">
+					<a class="btn-flat active" href="/my_favorite.html">我的收藏</a>
+					<a class="btn-flat active" href="/my_article.html">我的文章</a>
+					<a class="btn active" href="/my_reply.html">我的回复</a>
+					<a class="btn-flat active" href="/my_saying.html">我的说说</a>
+					<a class="btn-flat active" href="/my_comment.html">我的评论</a>
+				</div>
+			</nav>
+		</div><br>
 		<div class="row">
-			<div class="col m9 s12">
-				<div class="sidebar-title left-align">
-					<a href="/my.html"><h2>个人资料</h2></a>
-				</div>
-				<div class="contact-me">
-					<div class="row">
-						<div class="col m6 s12">
-							<div class="ppic left">
-								<img src="{{.sessions.Useravatar}}" alt="Image">
-								<h4>{{.sessions.Username}}</h4>
-							</div>
-							<div class="contact-things">
-								
-								<div class="c-text p-0">
-									<div class="card-body">
-										<ul class="list-unstyled replylist mb-0">
-											{{$sesid := .sessions.Userid}}
-											{{range .replys}}
-											<li class="media reply" data-pid="8" data-uid="2">
-												<!-- <a href="{{if eq .UserID $sesid}} /my.html {{else}}/user/{{.UserID}}/info.html{{end}}" class="mr-3" tabindex="-1">
-													<img class="avatar-3" src="{{.Article.User.Avatar}}">
-												</a> -->
-												<div class="media-body">
-													<div class="d-flex justify-content-between small text-muted">
-														<div>
-															<span style="padding-bottom:0;margin-bottom:0;color:; ">
-																<i class="iconfont icon-v1" style="font-size: !important;">
-																	{{.Article.User.Group.Name}}</i>
-															</span>
-															<span class="username">
-																<a href="{{if eq .UserID $sesid}} /my.html {{else}}/user/{{.UserID}}/info.html{{end}}" class="text-muted font-weight-bold">{{.Article.User.Username}}</a>
-															</span>
-															<span class="date text-grey ml-2">{{.Article.CreatedAt.Unix | strtime}}</span>
-														</div>
-														<div class="text-right text-grey">
-															<style>
-																.haya-reply-like .haya-reply-like-loved {
-																	color: var(--secondary) !important;
-																}
-															</style>
-														</div>
-													</div>
-													<div class="message mt-1 break-all">
-														<h6><a href="/article/{{.ID}}/detail.html" target="_blank">{{.Article.Title}}</a></h6>
-														<p>{{.Reply.Message | unescaped}}</p>
-													</div>
-												</div>
-											</li>
-											{{end}}
-										</ul>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<!-- colsm6 -->
+			<div class="col m9">
+				<div class="card">
+					<div class="table-responsive">
+						<table class="table" style="min-width: 800px">
+							<thead>
+								<tr>
+									<th></th>
+									<th width="60"><h5>序号</h5></th>
+									<th width="120"><h5>作者</h5></th>
+									<th width="180"><h5>内容</h5></th>
+									<th width="180"><h5>回复时间</h5></th>
+									<th><h5></h5></th>
+									<th width="220"><h5>更新时间</h5></th>
+									<th><h5></h5></th>
+									<th width="80"><h5></h5></th>
+								</tr>
+							</thead>
+							<tbody id="userlist">
+								{{range .replys}}
+								<tr uid="{{.ID}}">
+									<td></td>
+									<td>{{.Reply.ID}}</td>
+									<td uid="{{.User.ID}}">000</td>
+									<td><a href="/article/{{.Reply.ArticleID}}/detail.html">{{.Reply.Message | unescaped}}</a></td>
+									<td>{{.CreatedAt.Format "2006.01.02  15:04:05"}}</td>
+									<td></td>
+									<td>{{.CreatedAt.Format "2006.01.02  15:04:05"}}</td>
+									<td></td>
+									<td></td>
+								</tr>
+								{{end}}
+							</tbody>
+						</table>
 					</div>
-					<!-- row -->
 				</div>
-				<!-- /.contact-me -->
 			</div>
-			<!-- colm9 -->
-			
-			
+			{{ template "my/sidebar" }}
 		</div>
-		<!-- row -->
 	</div>
-	<!-- container -->
 </section>
-<!-- /#contact-section -->
-<!-- ==================== contact-section end ==================== -->
 {{ template "layout/footer" .}}
