--- a/views/app/reply/advance_reply.html
+++ b/views/app/reply/advance_reply.html
@@ -1,42 +1,62 @@
 {{ template "layout/header" .}}
-
 <script src="/static/ckeditor/ckeditor.js"></script>
-<main id="body">
-	<div class="container">
+<!-- ==================== single-blog-section start ====================-->
+<section id="single-blog-section" class="single-blog-section w100dt mb-50">
+	<div class="container">	
 		<div class="row">
-			<div class="col-lg-10 mx-auto">
-				<div class="card">
-					<div class="card-header"> 高级回复 </div>
-					<div class="card-body">
-						<form action="/api/article/{{.article_id}}/reply" method="post" id="advance_reply_form" class="d-block">
+			<div class="col m1"></div>
+			<div class="col m10 s12">
+				<nav class="breadcrumb-nav w100dt">
+					<div class="page-name hide-on-small-only left">
+						<h4>高级回复</h4>
+					</div>
+					<div class="nav-wrapper right">
+						<a href="/" class="breadcrumb">首页</a>
+						<a href="#" onclick="javascript:history.back(-1);" class="breadcrumb active">返回</a>
+					</div>
+					<!-- /.nav-wrapper -->
+				</nav><br>
+				<div class="blogs mb-30">
+					<div class="card">
+						<form action="/api/article/{{.article_id}}/reply" method="post" id="advance_reply_form" class="contact-form">
 							<input type="hidden" id="quotetid" name="articleid" value="{{.article_id}}">
 							<input type="hidden" id="docutype" name="docutype" value="0">
-							<div class="message mt-1">
-								<textarea class="form-control" id="editor1" placeholder="内容" name="message"></textarea>
+							<label for="title">可以添加表情等</label>
+							<div class="contact-input">
+								<div class="edui-container" style="width: 100%; z-index: 999;">
+									<div class="edui-editor-body message">
+										<textarea class="form-control" placeholder="内容" name="message" id="editor1" style="height: 300px; display: none;"></textarea>
+									</div>
+								</div>
 							</div>
-							<div class="text-muted mt-2 small">
-								<div class="d-flex justify-content-between">
-									<div class="attachlist_parent">
-										<a class="small text-left" href="javascript:void(0)">
-											<label class="addattach" id="addattach">
-												<i class="icon-folder-open-o"></i> 添加附件 <input type="file" id="add_attach" multiple="multiple" class="invisible">
-											</label>
-										</a>
-									</div>
-									<div>
-										<button id="replysubmit" type="button" class="btn btn-sm btn-secondary" id="submit" data-loading-text="正在提交...">
-											回复 </button>
-									</div>
+							<div class="d-flex justify-content-between">
+								{{if eq .sessions.Isadmin "1"}}
+								<div class="attachlist_parent">
+									<a class="small text-left" href="javascript:void(0)">
+										<label class="addattach" id="addattach">
+											<i class="icon-folder-open-o"></i> 添加附件 <input type="file" id="add_attach" multiple="multiple" class="invisible">
+										</label>
+									</a>
+								</div>
+								{{end}}
+								<div class="right">
+									<button type="button" class="btn btn-primary" id="replysubmit" data-loading-text="正在提交..."> 回复 </button>
 								</div>
 							</div>
 						</form>
 					</div>
 				</div>
+				<!-- /.blogs -->
 			</div>
-			
+			<!-- colm8 -->
 		</div>
+		<!-- row -->
 	</div>
-</main>
+	<!-- container -->
+</section>
+<!-- /#single-blog-section -->
+<!-- ==================== single-blog-section end ====================-->
+
 <script>
 	CKEDITOR.replace('message', {
 		language: 'zh-cn',
@@ -77,10 +97,8 @@
 		upload_hidden: false,
 		removeDialogTabs: 'image:advanced;image:Link',
 		filebrowserImageUploadUrl: "/api/image/upload",
-		filebrowserUploadUrl: "/api/image/upload",
-		
-		extraPlugins: 'uploadimage',
-		
+		filebrowserUploadUrl: "/api/image/upload",		
+		extraPlugins: 'uploadimage',		
 		codeSnippet_theme: 'zenburn'
 	});
 	var qrform = $("#advance_reply_form")
@@ -119,16 +137,14 @@
 		$.xpost(qrform.attr('action'), replydata, function(code, message) {
 			console.log(code, ":", message)
 			if (code == 200) {
-				$.alert("回复成功")
-				setTimeout(function() {
-					
+				alert("回复成功，刷新查看")
+				setTimeout(function() {					
 					history.back()
-				}, 1000)
+				}, 500)
 			} else if (code < 0) {
-				$.alert(message);
+				alert(message);
 				jsubmit.button('reset');
 			} else {
-				jform.find('[name="' + code + '"]').alert(message).focus();
 				jsubmit.button('reset');
 			}
 		});
@@ -186,7 +202,7 @@
 					$.alert("上传成功")
 					setTimeout(function(){
 					    location.reload()
-					}, 1000)
+					}, 500)
 				} else {
 					$.alert(res.message)
 					return
